# shelly-keys

./: Cargo.toml  README.md  build.rs
resources/: shelly.rc
src/: main.rs  os_ex.rs  template_clap.rs  template_tokio_cmd.rs
